[project]
name = "gridworld-rl"
version = "0.1.0"
description = "GridWorld RL environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

# 🔥 ENTRY POINTS (IMPORTANT)
[project.scripts]
openenv-server = "server.app:main"

# Optional but makes it more standard
[tool.setuptools]
packages = ["server"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"